# PyManifold

./: .pre-commit-config.yaml  AGENTS.md  pyproject.toml
pymanifold/: lib.py  types.py
pymanifold/utils/: kelly.py
tests/: test_client_endpoints.py  test_pymanifold.py
