[project]
name = "PyManifold"
version = "0.2.0"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Benjamin", email = "ben@congdon.dev" },
    { name =  "Glinte" },
]

dependencies = [
    "requests>=2.28.0",
    "vcrpy>=4.1.1",
    "numpy>=1.23.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "ruff>=0.14.5",
    "pytest>=7.4.0",
    "Markdown>=3.4.1",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "pymanifold"
module-root = ""